--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 body {
   margin: 0;
   box-sizing: border-box;
-  font-family: "Roboto", serif;}
+  font-family: "Roboto", serif;
+}
 
 .header {
   display: flex;
   justify-content: center;
+  gap: 50px;
   width: 90%;
   align-items: center;
   margin: 0 auto;
@@ -33,30 +35,41 @@ body {
 }
 
 .calories-consumed h2 {
-    margin-left: 10px;
-  }
+  margin-left: 10px;
+}
 
-  .macros-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10%;
-  }
+.macros-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10%;
+}
 
-  .meal-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+.meal-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
 
-  .meal-card {
-    display: flex;
-    align-items: center;
-    gap: 100px;
-  }
+.meal-card {
+  display: flex;
+  align-items: center;
+  gap: 100px;
+}
 
-  .meal-card button {
-    border-radius: 20px;
-    cursor: pointer;
-  }
+.meal-card button {
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+  border-radius: 50%;
+  align-self: right;
+}
+
+.meal-info label{
+  display: block;
+  margin-bottom: 10px;
+  
+}
