--- a/src/App.css
+++ b/src/App.css
@@ -57,8 +57,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 100px;
-  width: 400px
+  width: 400px;
 }
 
 .meal-card button {
@@ -119,7 +118,7 @@ body {
 
 .meal-info input[type="text"],
 .meal-info input[type="number"],
-.meal-info input[type="date"] {
+.meal-info input[type="time"] {
   padding: 8px;
   font-size: 14px;
   border: 1px solid #cccccc;
@@ -148,9 +147,5 @@ body {
 
 .popup-form button:hover {
   background-color: #0463f3;
-}
-
-#food-name {
-  display: block;
 }
 
