--- a/src/App.css
+++ b/src/App.css
@@ -28,12 +28,21 @@ body {
 }
 
 .calories-consumed {
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 20px;
 }
 
 .calories-consumed h2 {
   margin-left: 10px;
+}
+
+.calories-goal-heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 .macros-container {
@@ -73,18 +82,17 @@ body {
   
 }
 
-/* Popup Form Container Styles */
 .popup-overlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent dark background */
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1000; /* Ensure it overlays other content */
+  z-index: 1000;
 }
 
 .popup-form {
@@ -127,11 +135,10 @@ body {
 
 .meal-info input:focus {
   outline: none;
-  border-color: #0463f3; /* Green border on focus */
+  border-color: #0463f3; 
   box-shadow: 0 0 5px rgba(76, 175, 80, 0.3);
 }
 
-/* Button Styles */
 .popup-form button {
   background-color: #0463f3;
   color: #ffffff;
@@ -144,6 +151,5 @@ body {
 }
 
 .popup-form button:hover {
-  background-color: #0463f3;
+  background-color: #01327d;
 }
-
