--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,32 @@
 body {
+  --background-color : white;
+  --text-color : black;
+  --element-color : white;
   margin: 0;
   box-sizing: border-box;
   font-family: "Roboto", serif;
+}
+
+main,header {
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+main.dark , header.dark {
+  --background-color : black;
+  --text-color : white;
+  --element-color : rgb(50, 50, 50);
+} 
+main {
+  padding: 24px;
+  min-height: calc(100vh - 40px);
 }
 
 .header {
   display: flex;
   justify-content: center;
   gap: 50px;
-  width: 90%;
+  width: 100%;
   align-items: center;
   margin: 0 auto;
 }
