--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ main,header {
   color: var(--text-color);
 }
 
-main.dark , header.dark {
+main.dark , header.dark, .popup-form.dark{
   --background-color : black;
   --text-color : white;
   --element-color : rgb(50, 50, 50);
@@ -110,7 +110,8 @@ main {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: var(--background-color);
+  color: var(--text-color-color);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -118,11 +119,11 @@ main {
 }
 
 .popup-form {
-  background-color: #ffffff;
+  background-color: var(--background-color);
   width: 300px;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 4px 15px var(--text-color);
   z-index: 1001;
   display: flex;
   flex-direction: column;
@@ -131,13 +132,13 @@ main {
 
 .popup-form h2 {
   font-size: 20px;
-  color: #333333;
+  color: var(--text-color);
   margin: 0 0 10px;
 }
 
 .meal-info label {
   font-size: 14px;
-  color: #666666;
+  color: var(--text-color);
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -175,3 +176,15 @@ main {
 .popup-form button:hover {
   background-color: #01327d;
 }
+
+#darkModeToggle {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  transition: background-color 0.3s, color 0.3s;
+}
+
