--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,25 @@
 body {
-  --background-color : white;
-  --text-color : black;
-  --element-color : white;
+  --background-color: white;
+  --text-color: black;
+  --element-color: white;
   margin: 0;
   box-sizing: border-box;
   font-family: "Roboto", serif;
 }
 
-main,header {
+main,
+header {
   background-color: var(--background-color);
   color: var(--text-color);
 }
 
-main.dark , header.dark, .popup-form.dark{
-  --background-color : black;
-  --text-color : white;
-  --element-color : rgb(50, 50, 50);
-} 
+main.dark,
+header.dark,
+.popup-form.dark {
+  --background-color: black;
+  --text-color: white;
+  --element-color: rgb(50, 50, 50);
+}
 main {
   padding: 24px;
   min-height: calc(100vh - 40px);
@@ -42,7 +45,7 @@ main {
 }
 
 .nav ul li:hover {
-  text-decoration: underline;
+  transform: scale(1.05);
 }
 
 .calories-consumed {
@@ -50,10 +53,7 @@ main {
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-}
-
-.calories-consumed h2 {
-  margin-left: 10px;
+  gap: 10px;
 }
 
 .calories-goal-heading {
@@ -94,14 +94,35 @@ main {
   align-self: right;
 }
 
-.meal-card li {
-  list-style: none;
+.meal-card .add-btn:hover {
+  transform: scale(1.2);
 }
 
-.meal-info label{
+.meal-card li {
+  list-style: none;
+  margin-bottom: 10px;
+}
+
+.meal-info label {
   display: block;
   margin-bottom: 10px;
-  
+}
+
+.meal-items {
+  width: 350px;
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+}
+
+.meal-items .remove-btn {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+}
+
+.meal-items .remove-btn:hover {
+  transform: scale(1.5);
 }
 
 .popup-overlay {
@@ -158,7 +179,7 @@ main {
 
 .meal-info input:focus {
   outline: none;
-  border-color: #0463f3; 
+  border-color: #0463f3;
   box-shadow: 0 0 5px rgba(76, 175, 80, 0.3);
 }
 
@@ -188,3 +209,11 @@ main {
   transition: background-color 0.3s, color 0.3s;
 }
 
+#darkModeToggle:hover {
+  transform: scale(1.05);
+}
+
+.statisticsHeading {
+  margin-top: 40px;
+  text-align: center;
+}
