--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@ body {
 
 main,
 header,
-.stats {
+.stats,
+.settings {
   background-color: var(--background-color) !important;
   color: var(--text-color) !important;
 }
@@ -17,7 +18,8 @@ header,
 main.dark,
 header.dark,
 .popup-form.dark, 
-.stats.dark {
+.stats.dark,
+.settings.dark {
   --background-color: black;
   --text-color: white;
   --element-color: rgb(50, 50, 50);
@@ -241,4 +243,26 @@ main {
 .statisticsHeading {
   margin: 0;
   padding-top: 20px;
+}
+
+.settings {
+  min-height: calc(100vh - 40px);
+}
+
+.settings h2 {
+  text-align: center;
+}
+
+.options {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.goal-radio-group {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
