adding settings functionality

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ header,
 
 main.dark,
 header.dark,
-.popup-form.dark, 
+.popup-form.dark,
 .stats.dark,
 .settings.dark {
   --background-color: black;
@@ -57,7 +57,6 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
   gap: 10px;
 }
 
@@ -218,8 +217,10 @@ main {
   transform: scale(1.05);
 }
 
-.statisticsHeading {
+.statistics-heading {
   text-align: center;
+  margin: 0;
+  padding-top: 20px;
 }
 
 .chart-container {
@@ -240,29 +241,21 @@ main {
   min-height: calc(100vh - 40px);
 }
 
-.statisticsHeading {
-  margin: 0;
-  padding-top: 20px;
-}
-
 .settings {
   min-height: calc(100vh - 40px);
 }
 
-.settings h2 {
+.settings-heading {
   text-align: center;
+  margin: 0;
+  padding-top: 20px;
 }
 
 .options {
+  margin-top: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   gap: 30px;
-}
-
-.goal-radio-group {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
 }
