--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,7 @@ main {
   justify-content: center;
   align-items: center;
   gap: 10%;
+  margin: 30px 0;
 }
 
 .meal-container {
@@ -257,20 +258,20 @@ main {
 }
 
 .average-cal {
-  background-color: #f9f9f9; 
-  border: 1px solid #ddd; 
-  border-radius: 8px; 
-  padding: 10px; 
-  max-width: 350px; 
-  margin: 20px auto; 
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 10px;
+  max-width: 350px;
+  margin: 20px auto;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .average-cal h3 {
-  font-size: 1rem; 
-  color: #333; 
-  margin-bottom: 10px; 
-  font-weight: 500; 
+  font-size: 1rem;
+  color: #333;
+  margin-bottom: 10px;
+  font-weight: 500;
 }
 
 .average-cal h3:last-child {
