--- a/src/App.css
+++ b/src/App.css
@@ -288,7 +288,7 @@ main {
 }
 
 .stats {
-  min-height: calc(100vh - 40px);
+  min-height: calc(100vh + 40px);
 }
 
 .settings {
@@ -302,37 +302,80 @@ main {
 }
 
 .options {
-  margin-top: 30px;
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
-  gap: 30px;
-}
-
-.average-cal {
+  gap: 1.5rem;
+  padding: 1.5rem;
+  max-width: 500px;
+  margin: 0 auto;
   background-color: var(--background-color);
   color: var(--text-color);
   border: 1px solid var(--text-color);
   border-radius: 8px;
-  padding: 10px;
-  max-width: 350px;
+}
+
+.options label {
+  display: flex;
+  flex-direction: column;
+  font-size: 1rem;
+  color: var(--text-color);
+}
+
+.options input[type="number"],
+.options select {
+  margin-top: 0.5rem;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border: 1px solid var(--text-color);
+  border-radius: 4px;
+  outline: none;
+}
+
+.options input[type="number"]:focus,
+.options select:focus {
+  border-color: #007bff;
+  box-shadow: 0 0 4px rgba(0, 123, 255, 0.4);
+}
+
+.goal-radio-group {
+  font-size: 1rem;
+  color: var(--text-color);
+  display: flex;
+  align-items: center;;
+}
+
+.goal-radio-group label {
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
+
+.goal-radio-group input {
+  margin-right: 0.5rem;
+}
+
+.options input:hover,
+.options select:hover {
+  border-color: #007bff;
+}
+
+.average-cal {
+  max-width: 600px;
   margin: 20px auto;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  background-color: var(--background-color);
+  border-radius: 10px;
+  color: var(--text-color);
 }
 
 .average-cal h3 {
-  font-size: 1rem;
-  margin-bottom: 10px;
-  font-weight: 500;
-}
-
-.average-cal h3:last-child {
-  margin-bottom: 0;
+  font-size: 18px;
+  margin: 10px 0;
+  line-height: 1.5;
+  color: var(--text-color);
 }
 
 .average-cal sup {
-  font-size: 0.7rem;
+  font-size: 12px;
 }
 
 @media (max-width: 768px) {
@@ -351,5 +394,16 @@ main {
   .meal-card {
     padding: 10px;
   }
-}
+  .average-cal {
+    padding: 15px;
+  }
 
+  .average-cal h3 {
+    font-size: 16px;
+  }
+
+  .options {
+    padding: 1rem;
+    gap: 1rem;
+  }
+}
