--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,9 @@ body {
 main,
 header,
 .stats,
-.settings {
+.settings,
+.login-container,
+.loader-container {
   background-color: var(--background-color) !important;
   color: var(--text-color) !important;
 }
@@ -19,7 +21,9 @@ main.dark,
 header.dark,
 .popup-form.dark,
 .stats.dark,
-.settings.dark {
+.settings.dark,
+.login-container.dark,
+.loader-container.dark {
   --background-color: black;
   --text-color: white;
   --element-color: rgb(50, 50, 50);
@@ -40,12 +44,46 @@ main {
   position: sticky;
   top: 0;
   z-index: 1;
+  border-bottom: 1px solid var(--text-color);
+}
+
+.nav ul a {
+  text-decoration: none;
+  color: var(--text-color);
+  cursor: pointer;
 }
 
 .nav ul {
   display: flex;
   gap: 20px;
   list-style: none;
+  align-items: center;
+}
+
+.login-btn {
+  padding: 8px 15px;
+  font-size: 16px;
+  cursor: pointer;
+  border: 1px solid var(--text-color);
+  border-radius: 5px;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  transition: all 0.3s;
+}
+
+.logout-btn {
+  padding: 8px 15px;
+  font-size: 16px;
+  cursor: pointer;
+  border: 1px solid var(--text-color);
+  border-radius: 5px;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  transition: all 0.3s;
+}
+
+.logout-btn:hover {
+  transform: scale(1.1);
 }
 
 .hamburger-menu {
@@ -53,11 +91,7 @@ main {
   cursor: pointer;
 }
 
-.nav ul li {
-  cursor: pointer;
-}
-
-.nav ul li:hover {
+.nav ul a:hover {
   transform: scale(1.1);
   transition: all 0.3s ease;
 }
@@ -294,7 +328,7 @@ main {
   border-radius: 5px;
   background-color: var(--background-color);
   color: var(--text-color);
-  transition: background-color 0.3s, color 0.3s;
+  transition: all 0.3s;
 }
 
 #darkModeToggle:hover {
@@ -394,6 +428,21 @@ main {
   border-color: #007bff;
 }
 
+.save-btn {
+  padding: 8px 15px;
+  font-size: 16px;
+  cursor: pointer;
+  border: 1px solid var(--text-color);
+  border-radius: 5px;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  transition: all 0.3s;
+}
+
+.save-btn:hover {
+  background-color: var(--element-color);
+}
+
 .average-cal {
   max-width: 400px;
   margin: auto;
@@ -428,6 +477,114 @@ main {
   justify-content: center;
 }
 
+.login-container {
+  min-height: calc(100vh - 180px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  padding-top: 100px;
+  background-color: var(--background-color);
+}
+
+.form-container {
+  background-color: var(--background-color);
+  border-radius: 8px;
+  color: var(--text-color);
+  width: 100%;
+  max-width: 400px;
+}
+
+.form-container h2 {
+  text-align: center;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+.form-group label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+.form-group input {
+  width: 94%;
+  padding: 12px;
+  border: 1px solid var(--text-color);
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+.submit-btn {
+  width: 100%;
+  padding: 12px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.submit-btn:hover {
+  background-color: #0056b3;
+}
+
+.register {
+  text-align: center;
+  margin-top: 16px;
+}
+.register-btn {
+  width: 50%;
+  cursor: pointer;
+  padding: 12px;
+  background-color: #42b72a;
+  text-decoration: none;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+}
+
+.register-btn:hover,
+.sign-up-btn:hover {
+  background-color: #36a420;
+}
+
+.sign-up-btn {
+  width: 50%;
+  display: block;
+  margin: 0 auto;
+  cursor: pointer;
+  padding: 12px;
+  background-color: #42b72a;
+  text-decoration: none;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+}
+
+.login-div {
+  text-align: center;
+  margin-top: 16px;
+}
+.login-div a {
+  color: #007bff;
+  text-decoration: none;
+}
+.login-div a:hover {
+  text-decoration: underline;
+}
+
+.loader-container {
+  min-height: calc(100vh - 77px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media (max-width: 768px) {
   header h1 {
     font-size: 30px;
@@ -448,7 +605,7 @@ main {
     right: 10px;
     top: 38px;
     color: var(--text-color);
-    border-radius: 5px;;
+    border-radius: 5px;
     background-color: var(--element-color);
     flex-direction: column;
     justify-content: center;
