--- a/src/App.css
+++ b/src/App.css
@@ -585,6 +585,10 @@ main {
   justify-content: center;
 }
 
+.login-p {
+  text-align: center;
+}
+
 @media (max-width: 768px) {
   header h1 {
     font-size: 30px;
